--- a/Client/View/Controls/Title.axaml
+++ b/Client/View/Controls/Title.axaml
@@ -3,22 +3,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Client.View.Content.Login.Templates.Title">
-   <TextBlock VerticalAlignment="Center"
-              FontSize="32.0"
-              FontFamily="{StaticResource Poppins}">
-      <Run Text="Welcome to"
-           Foreground="{DynamicResource White}" />
-      <LineBreak />
-      <Run Text="Heast Messenger">
-         <Run.Foreground>
-            <LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,100%">
-               <LinearGradientBrush.GradientStops>
-                  <GradientStop Offset="0" Color="#FFFDB242" />
-                  <GradientStop Offset="1" Color="#FFFFCF8A" />
-               </LinearGradientBrush.GradientStops>
-            </LinearGradientBrush>
-         </Run.Foreground>
-      </Run>
-   </TextBlock>
+             x:Class="Client.View.Controls.Title">
+    <TextBlock VerticalAlignment="Center"
+               FontSize="32.0"
+               FontFamily="{StaticResource Poppins}">
+        <Run Text="Welcome to"
+             Foreground="{DynamicResource White}" />
+        <LineBreak />
+        <Run Text="Heast Messenger">
+            <Run.Foreground>
+                <LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,100%">
+                    <LinearGradientBrush.GradientStops>
+                        <GradientStop Offset="0" Color="#FFFDB242" />
+                        <GradientStop Offset="1" Color="#FFFFCF8A" />
+                    </LinearGradientBrush.GradientStops>
+                </LinearGradientBrush>
+            </Run.Foreground>
+        </Run>
+    </TextBlock>
 </UserControl>
