--- a/Client/View/Controls/TitleTemplate.axaml
+++ b/Client/View/Controls/TitleTemplate.axaml
@@ -1,28 +1,28 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:templates="clr-namespace:Client.View.Content.Login.Templates">
-   <Design.PreviewWith>
-      <templates:TitleTemplate />
-   </Design.PreviewWith>
+        xmlns:controls="clr-namespace:Client.View.Controls">
+    <Design.PreviewWith>
+        <controls:TitleTemplate />
+    </Design.PreviewWith>
 
-   <Style Selector="templates|TitleTemplate">
-      <!-- Set Defaults -->
-      <Setter Property="Template">
-         <ControlTemplate>
-            <Grid RowDefinitions="Auto, Auto, *"
-                  Margin="0 0 0 10.0">
-               <TextBlock Grid.Row="0"
-                          Classes="H1"
-                          Inlines="{TemplateBinding Title}" />
-               <TextBlock Grid.Row="1"
-                          Classes="Subtitle"
-                          FontWeight="Normal"
-                          Inlines="{TemplateBinding Subtitle}" />
-               <ContentPresenter Grid.Row="2"
-                                 Margin="0 20.0 0 0"
-                                 Content="{TemplateBinding Content}" />
-            </Grid>
-         </ControlTemplate>
-      </Setter>
-   </Style>
+    <Style Selector="controls|TitleTemplate">
+        <!-- Set Defaults -->
+        <Setter Property="Template">
+            <ControlTemplate>
+                <Grid RowDefinitions="Auto, Auto, *"
+                      Margin="0 0 0 10.0">
+                    <TextBlock Grid.Row="0"
+                               Classes="H1"
+                               Inlines="{TemplateBinding Title}" />
+                    <TextBlock Grid.Row="1"
+                               Classes="Subtitle"
+                               FontWeight="Normal"
+                               Inlines="{TemplateBinding Subtitle}" />
+                    <ContentPresenter Grid.Row="2"
+                                      Margin="0 20.0 0 0"
+                                      Content="{TemplateBinding Content}" />
+                </Grid>
+            </ControlTemplate>
+        </Setter>
+    </Style>
 </Styles>
